feat: Initialize AURA Assistant project with server setup, Docker integration, and MCP bridge
- Created package.json for Node.js dependencies and scripts
- Added requirements.txt for Python dependencies
- Implemented server.js to handle API endpoints and serve static files
- Developed setup-mcp-bridge.sh for MCP Docker bridge setup
- Added start.sh script to launch the AURA server
- Created verify-setup.sh for system verification and checks

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <button class="feature-btn" onclick="showAuraCapabilities()">💡 What can I do?</button>
                 <button class="feature-btn" onclick="clearChat()">🗑️ Clear Chat</button>
                 <button class="feature-btn" onclick="exportChat()">📤 Export Chat</button>
+                <button class="feature-btn" onclick="manageMCP()">🔧 Manage MCP</button>
             </div>
         </div>
         
@@ -57,6 +58,8 @@
     </div>
     
     <script src="config.js"></script>
+    <script src="mcp-docker-autoconfig.js"></script>
+    <script src="mcp-integration.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
