feat: Add background activity panel and logging functionality; update styles and ignore MCP memory snapshots

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,14 @@
                 <span class="status-text">Ready to help</span>
             </div>
         </div>
+
+        <div class="background-activity hidden" id="backgroundActivity">
+            <div class="activity-header">
+                <span class="activity-heading">Background activity</span>
+                <button type="button" class="activity-clear-btn" id="clearActivity">Clear</button>
+            </div>
+            <ul class="activity-list" id="activityList"></ul>
+        </div>
         
         <div class="chat-messages" id="chatMessages">
             <div class="message bot-message">
